# libnonstdcxx

./: CMakeLists.txt  LibNonStdC++Config.cmake  _c32toc8.c  _c8len.c  basic_variant  buffered_ifstream  casts  casts.cpp  char32.h  connect  cxxabi  cxxabi.cpp  directory  directory.cpp  dl  dl.cpp  exceptions.cpp  file  funcid  getc16.c  getc32.c  improved_istream  improved_istream.cpp  ituple  lexical_cast  matrix  nullref  object  power  putc32.c  runtime_cast  signal  stdio_sync_filebuf  stdio_sync_filebuf.cpp  traits  tupleid  tupleid.cpp  twoway_vector  type_array  typenameid  (+6 more)
unicode/: utf16.h  utf8.h
